test/invalid/2DVector/2DVector.plume
/**
 * A simple 2D vector with scalar multiplication, dot product and addition
 *
 * @author Robin Burgess 36815
 */
 class 2DVector extends Object is
	field x : Integer
	field y : Integer
	method override toString : () -> String is
		"(" + x.toString() + "," + y.toString()+")"
		
	method scalarMultiplication : (i : Integer) -> 2DVector is
		new 2DVector (x*i,y*i)
		
	method dotProduct : (v : 2DVector) -> Integer is
		x*v.x + y*v.y
		
	method add : (v : 2DVector) -> 2DVector is
		new 2DVector (x+v.x,y+v.y)